updates of weblink

--- a/src/pages/fixture/fixture.scss
+++ b/src/pages/fixture/fixture.scss
@@ -1,4 +1,7 @@
 page-fixture {
+   .weblinkclass{
+    height:100%;
+  }
       ion-header .toolbar
         {
             height: 45px !important;
