--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -57,6 +57,10 @@
   font-family: Gotham-Medium;
 }
 
+.weblinkclass{
+    height: 100%;
+}
+
 .roundtxt{
   text-align: center;
     font-size: 15px;
