--- a/src/pages/matchcenter/matchcenter.scss
+++ b/src/pages/matchcenter/matchcenter.scss
@@ -1,7 +1,26 @@
 page-matchcenter {
+
+  ion-footer {
+    padding-top: 0px !important;
+    padding-bottom: 0px !important;
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+    bottom: 52px !important;
+}
+
   .weblinkclass{
-    height:92%;
+    -webkit-overflow-scrolling: touch !important;
+    overflow: scroll !important;
+    width: 100%;
+    height: 100%;
+    border: none;
   }
+  .iframe {
+    overflow: scroll !important;
+    width: 500px;
+    height: 500px;
+    border: none;
+}
      ion-header .toolbar
         {
             height: 45px !important;
