--- a/src/pages/fixture/fixture.scss
+++ b/src/pages/fixture/fixture.scss
@@ -1,7 +1,25 @@
 page-fixture {
    .weblinkclass{
-    height:92%;
+    // overflow: hidden;
+    width: 100%;
+    height: 100%;
+    border: none;
+    -webkit-overflow-scrolling: touch !important;
+    overflow: scroll !important;
   }
+  ion-footer {
+    padding-top: 0px !important;
+    padding-bottom: 0px !important;
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+    bottom: 52px !important;
+}
+  .iframe {
+    overflow: scroll !important;
+    width: 500px !important;
+    height: 500px !important;
+    border: none;
+}
       ion-header .toolbar
         {
             height: 45px !important;
