--- a/src/pages/ladder/ladder.scss
+++ b/src/pages/ladder/ladder.scss
@@ -1,7 +1,16 @@
 page-ladder {
-   .weblinkclass{
-    height:100%;
+  .weblinkclass{
+    -webkit-overflow-scrolling: touch !important;
+    overflow: scroll !important;
+    width: 100% !important;
+    height: 100% !important;
+    border: none;
   }
+  .weblinkclass iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+}
   .table.DTFC_Cloned
   {
     background: white !important;
