--- a/src/pages/fixture/fixture.scss
+++ b/src/pages/fixture/fixture.scss
@@ -1,12 +1,16 @@
 page-fixture {
-   .weblinkclass{
-    // overflow: hidden;
+  .weblinkclass{
+    -webkit-overflow-scrolling: touch !important;
+    overflow: scroll !important;
+    width: 100% !important;
+    height: 100% !important;
+    border: none;
+  }
+  .weblinkclass iframe {
     width: 100%;
     height: 100%;
     border: none;
-    -webkit-overflow-scrolling: touch !important;
-    overflow: scroll !important;
-  }
+}
   ion-footer {
     padding-top: 0px !important;
     padding-bottom: 0px !important;
@@ -14,12 +18,7 @@ page-fixture {
     padding-right: 0px !important;
     bottom: 52px !important;
 }
-  .iframe {
-    overflow: scroll !important;
-    width: 500px !important;
-    height: 500px !important;
-    border: none;
-}
+
       ion-header .toolbar
         {
             height: 45px !important;
