--- a/src/pages/goalkickers/goalkickers.scss
+++ b/src/pages/goalkickers/goalkickers.scss
@@ -1,7 +1,16 @@
 page-goalkickers {
   .weblinkclass{
-     height: 100%;
+    -webkit-overflow-scrolling: touch !important;
+    overflow: scroll !important;
+    width: 100% !important;
+    height: 100% !important;
+    border: none;
   }
+  .weblinkclass iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+}
   ion-header .toolbar
   {
       height: 45px !important;
