--- a/src/pages/matchcenter/matchcenter.scss
+++ b/src/pages/matchcenter/matchcenter.scss
@@ -1,5 +1,7 @@
 page-matchcenter {
 
+  .wrapper{ position: relative!important; }
+
   ion-footer {
     padding-top: 0px !important;
     padding-bottom: 0px !important;
